use trading-common for BookSyncStatus and event type strings